# final-project-robotics

./: .gitignore  COMPARISON_RESULTS.md  DEMO_COMPLETE.md  Dockerfile  FINAL_COMPARISON_RESULTS.md  FINAL_TESTING_GUIDE.md  HOW_TO_TEST.md  IMPLEMENTATION_NOTES.md  INCREMENTAL_TESTING.md  INCREMENT_SUMMARY.md  INDEX.md  QUICK_START.md  QUICK_START.sh  README.md  RUN_DEMO_GUIDE.md  RUN_INSTRUCTIONS.md  TEST_RESULTS_SUMMARY.md  analyze_and_report.py  analyze_results.py  automated_test.sh  disable_shm.xml  docker-compose.yml  docker_entrypoint.sh  docker_gazebo_nav.sh  execute_path.py  extract_path.py  fastdds_no_shm.xml  fastdds_profile.xml  generate_map.py  run_comparison_tests.sh  run_demo.sh  run_docker.sh  run_full_test.sh  run_gazebo_nav.sh  run_nav_demo.sh  run_test.sh  save_map.py  simple_nav_test.py  test_navigation.sh  test_step1_world.sh  (+5 more)
delivery_robot/: package.xml  setup.py
delivery_robot/config/: nav2_default_view.rviz  nav2_params_navfn.yaml  nav2_params_smac.yaml  ros_gz_bridge.yaml  slam_params.yaml
delivery_robot/delivery_robot/: auto_explore.py  metrics_logger.py  odom_to_tf.py  path_executor.py  scan_timestamp_fix.py  timestamp_republisher.py  waypoint_navigator.py
delivery_robot/launch/: full_navigation.launch.py  gazebo_nav_demo.launch.py  gazebo_world.launch.py  nav2_bringup.launch.py  nav2_odom_only.launch.py  simulation_bringup.launch.py  slam_launch.py  spawn_robot.launch.py  test_world_robot.launch.py
delivery_robot/maps/: office_map.pgm  office_map.yaml  simple_map.pgm  simple_map.yaml
delivery_robot/models/: delivery_robot.sdf
(+71 files in other folders)
